chore : configuração de referencia do projeto de teste

--- a/tests/portal-oficina.Application.Tests/portal-oficina.Application.Tests.csproj
+++ b/tests/portal-oficina.Application.Tests/portal-oficina.Application.Tests.csproj
@@ -24,6 +24,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\portal-oficina.Application\portal-oficina.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
